fix: content overflow

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,6 @@
   border-radius: 3px 3px 0px 0px;
   margin-left: 26px;
   padding: 0 10px;
-  overflow: auto;
 }
 
 .sectionHeader {
